UI fix to prevent elements overlapping

--- a/src/components/List/List.css
+++ b/src/components/List/List.css
@@ -3,6 +3,7 @@
 	/* margin-top: 30px; */
 	border-radius: 5px;
 	background: #4f535b;
+	clear: both;
 }
 
 .loading {
